--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/no-unescaped-entities": "off",
-    "@next/next/no-img-element": "warn",
+    "@next/next/no-img-element": "off",
     "react-hooks/exhaustive-deps": "warn"
   }
 }
